[package]
name = "wag"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
version = "0.2.0"
edition = "2021"
categories = ["asynchronous", "concurrency", "rust-patterns"]
keywords = ["sync", "async", "wait", "waitgroup", "wake"]
description = "Go like sync.WaitGroup implementation in Rust. (sync/async)"
homepage = "https://github.com/just-do-halee/wag"
repository = "https://github.com/just-do-halee/wag.git"
documentation = "https://docs.rs/wag"
license = "MIT OR Apache-2.0"
readme = "README.md"

exclude = [".gitignore", ".github/"]

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.22.0", features = ["full"] }
